syntax = "proto3";

import "google/api/annotations.proto";

option csharp_namespace = "Northwind.Grpc.Service";

package customer;

service Customer {
	rpc GetCustomer (CustomerRequest) returns (CustomerReply) {
		option (google.api.http) = {
		  get: "/v1/customer/{country}"
		};
	}
}

message CustomerRequest {
	string country = 1;
}

message CustomerReply {
	string country = 1;
	string companyName = 2;
	string contactName = 3;
	string address = 4;
	string city = 5;
	string phone = 6;
}